tillägg sv, bildmapp
tillägg sv, bildmapp

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
     <head>
         <meta charset="UTF-8">
         <link href="css/styles.css" rel="stylesheet">
@@ -60,18 +60,10 @@
                         </section>
                     </article>
                 </div>
-<!--
-                <aside class="sidebar">
-                    <p>Hittar du inte det du letar efter?</p>
-                    <form action="sokresultat.html" method="get">
-                        <input type="text" name="query" placeholder="Sök...">
-                        <button type="submit">Sök</button>
-                    </form>
-                </aside>-->
+               
             </div>
 
-            <div style="clear: both;">
-                <!--För att floaten ska avbrytas-->
+            <div style="clear: both;"> <!--För att floaten ska avbrytas-->
             </div>
 
             <footer>
